cabal-version:      2.4
name:               wordle
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports
-- apache license is used but cabal is not playing nice
license:            NONE 
author:             Maya Copeland
maintainer:         maya.copeland@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable wordle
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.3.0
        , random >= 1.1
        , ansi-terminal >= 0.6
    hs-source-dirs:   app
    default-language: Haskell2010
